--- a/07_TessellateGround_SutraCopy/07_TessellateGround_SutraCopy.vcxproj
+++ b/07_TessellateGround_SutraCopy/07_TessellateGround_SutraCopy.vcxproj
@@ -147,6 +147,75 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\commonSutraCopy\Swapchain.cpp" />
+    <ClCompile Include="..\commonSutraCopy\VulkanAppBase.cpp" />
+    <ClCompile Include="..\common\imgui\examples\imgui_impl_glfw.cpp" />
+    <ClCompile Include="..\common\imgui\examples\imgui_impl_vulkan.cpp" />
+    <ClCompile Include="..\common\imgui\imgui.cpp" />
+    <ClCompile Include="..\common\imgui\imgui_demo.cpp" />
+    <ClCompile Include="..\common\imgui\imgui_draw.cpp" />
+    <ClCompile Include="..\common\imgui\imgui_widgets.cpp" />
+    <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="TeapotPatch.cpp" />
+    <ClCompile Include="TessellateTeapotApp.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\commonSutraCopy\stb_image.h" />
+    <ClInclude Include="..\commonSutraCopy\Swapchain.h" />
+    <ClInclude Include="..\commonSutraCopy\TeapotModel.h" />
+    <ClInclude Include="..\commonSutraCopy\VulkanAppBase.h" />
+    <ClInclude Include="..\commonSutraCopy\VulkanBookUtil.h" />
+    <ClInclude Include="..\common\imgui\examples\imgui_impl_glfw.h" />
+    <ClInclude Include="..\common\imgui\examples\imgui_impl_vulkan.h" />
+    <ClInclude Include="..\common\imgui\imconfig.h" />
+    <ClInclude Include="..\common\imgui\imgui.h" />
+    <ClInclude Include="..\common\imgui\imgui_internal.h" />
+    <ClInclude Include="..\common\imgui\imstb_rectpack.h" />
+    <ClInclude Include="..\common\imgui\imstb_textedit.h" />
+    <ClInclude Include="..\common\imgui\imstb_truetype.h" />
+    <ClInclude Include="Camera.h" />
+    <ClInclude Include="TeapotPatch.h" />
+    <ClInclude Include="TessellateTeapotApp.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <CustomBuild Include="Shader\tessTeapotFS.frag">
+      <FileType>Document</FileType>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectDir)%(FileName).spv</Outputs>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(ProjectDir)%(FileName).spv</Outputs>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Compile Fragment Shader</Message>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Compile Fragment Shader</Message>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(VK_SDK_PATH)\Bin\glslangValidator.exe -V -S frag %(Identity) -o "$(ProjectDir)%(FileName).spv"</Command>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(VK_SDK_PATH)\Bin\glslangValidator.exe -V -S frag %(Identity) -o "$(ProjectDir)%(FileName).spv"</Command>
+    </CustomBuild>
+    <CustomBuild Include="Shader\tessTeapotTCS.tesc">
+      <FileType>Document</FileType>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectDir)%(FileName).spv</Outputs>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(ProjectDir)%(FileName).spv</Outputs>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Compile Tessellation Control Shader</Message>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Compile Tessellation Control Shader</Message>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(VK_SDK_PATH)\Bin\glslangValidator.exe -V -S tesc %(Identity) -o "$(ProjectDir)%(FileName).spv"</Command>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(VK_SDK_PATH)\Bin\glslangValidator.exe -V -S tesc %(Identity) -o "$(ProjectDir)%(FileName).spv"</Command>
+    </CustomBuild>
+    <CustomBuild Include="Shader\tessTeapotTES.tese">
+      <FileType>Document</FileType>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectDir)%(FileName).spv</Outputs>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(ProjectDir)%(FileName).spv</Outputs>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Compile Tessellation Evaluate Shader</Message>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Compile Tessellation Evaluate Shader</Message>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(VK_SDK_PATH)\Bin\glslangValidator.exe -V -S tese %(Identity) -o "$(ProjectDir)%(FileName).spv"</Command>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(VK_SDK_PATH)\Bin\glslangValidator.exe -V -S tese %(Identity) -o "$(ProjectDir)%(FileName).spv"</Command>
+    </CustomBuild>
+    <CustomBuild Include="Shader\tessTeapotVS.vert">
+      <FileType>Document</FileType>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectDir)%(FileName).spv</Outputs>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(ProjectDir)%(FileName).spv</Outputs>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Compile Vertex Shader</Message>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Compile Vertex Shader</Message>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(VK_SDK_PATH)\Bin\glslangValidator.exe -V -S vert %(Identity) -o "$(ProjectDir)%(FileName).spv"</Command>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(VK_SDK_PATH)\Bin\glslangValidator.exe -V -S vert %(Identity) -o "$(ProjectDir)%(FileName).spv"</Command>
+    </CustomBuild>
+    <None Include="TeapotPatch2.inc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
