NuGetでGLFWとGLMを追加。 これで6章の写経用プロジェクトが動作するようになった

--- a/07_TessellateGround_SutraCopy/07_TessellateGround_SutraCopy.vcxproj.filters
+++ b/07_TessellateGround_SutraCopy/07_TessellateGround_SutraCopy.vcxproj.filters
@@ -127,5 +127,6 @@
     <None Include="Shader\tessTeapotVS.vert">
       <Filter>Shader</Filter>
     </None>
+    <None Include="packages.config" />
   </ItemGroup>
 </Project>
