--- a/07_TessellateGround_SutraCopy/07_TessellateGround_SutraCopy.vcxproj.filters
+++ b/07_TessellateGround_SutraCopy/07_TessellateGround_SutraCopy.vcxproj.filters
@@ -33,9 +33,6 @@
     <ClCompile Include="TeapotPatch.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="TessellateTeapotApp.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
     <ClCompile Include="..\commonSutraCopy\Swapchain.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
@@ -60,15 +57,15 @@
     <ClCompile Include="..\common\imgui\examples\imgui_impl_vulkan.cpp">
       <Filter>ソース ファイル\imgui</Filter>
     </ClCompile>
+    <ClCompile Include="TessellateGroundApp.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="TeapotPatch.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="TessellateTeapotApp.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="..\commonSutraCopy\stb_image.h">
@@ -109,6 +106,9 @@
     </ClInclude>
     <ClInclude Include="..\common\imgui\examples\imgui_impl_vulkan.h">
       <Filter>ヘッダー ファイル\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="TessellateGroundApp.h">
+      <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
