GLFWとglmをNuGetで追加

--- a/09_ComputeFilter_SutraCopy/09_ComputeFilter_SutraCopy.vcxproj
+++ b/09_ComputeFilter_SutraCopy/09_ComputeFilter_SutraCopy.vcxproj
@@ -186,7 +186,19 @@
       <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(VK_SDK_PATH)\Bin\glslangValidator.exe -V -S vert %(Identity) -o "$(ProjectDir)%(FileName).spv"</Command>
     </CustomBuild>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
+    <Import Project="..\09_ComputeFilter\packages\glfw.3.3.2\build\native\glfw.targets" Condition="Exists('..\09_ComputeFilter\packages\glfw.3.3.2\build\native\glfw.targets')" />
+    <Import Project="..\09_ComputeFilter\packages\glm.0.9.9.800\build\native\glm.targets" Condition="Exists('..\09_ComputeFilter\packages\glm.0.9.9.800\build\native\glm.targets')" />
   </ImportGroup>
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>このプロジェクトは、このコンピューター上にない NuGet パッケージを参照しています。それらのパッケージをダウンロードするには、[NuGet パッケージの復元] を使用します。詳細については、http://go.microsoft.com/fwlink/?LinkID=322105 を参照してください。見つからないファイルは {0} です。</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\09_ComputeFilter\packages\glfw.3.3.2\build\native\glfw.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\09_ComputeFilter\packages\glfw.3.3.2\build\native\glfw.targets'))" />
+    <Error Condition="!Exists('..\09_ComputeFilter\packages\glm.0.9.9.800\build\native\glm.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\09_ComputeFilter\packages\glm.0.9.9.800\build\native\glm.targets'))" />
+  </Target>
 </Project>
