--- a/09_ComputeFilter_SutraCopy/09_ComputeFilter_SutraCopy.vcxproj.filters
+++ b/09_ComputeFilter_SutraCopy/09_ComputeFilter_SutraCopy.vcxproj.filters
@@ -118,5 +118,6 @@
     <None Include="Shader\tessVS.vert">
       <Filter>Shader</Filter>
     </None>
+    <None Include="packages.config" />
   </ItemGroup>
 </Project>
